Fixed Stackoverflow issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,7 +149,8 @@ header h1 span:nth-child(2) {
 	color: var(--color-blue);
 }
 
-footer {
+footer{
+	display:block;
 	position: fixed;
 	bottom: 0;
 	left: 0;
@@ -157,7 +158,30 @@ footer {
 	padding: 3rem;
 	font-size: 1.5rem;
 	text-align: center;
+	background: var(--color-black);}
+footer #btnTop{ 
+display: none;
+  position: fixed;
+  bottom: 2rem;
+  right: 3rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--color-red);
+  color: var(--color-white);
+  outline: none;
+  cursor: pointer;
+  z-index: 999;}
+
+footer .copyright{
+	font-weight: normal;
 	color: var(--color-white);
 	letter-spacing: 0.15rem;
-	background: var(--color-black);
+}
+
+
+@media 
+only screen and (max-width: 760px){
+	.report-title > a {display:block;position: inherit;text-align: center;
 }
